--- a/tasks/MacOSX/main.yml
+++ b/tasks/MacOSX/main.yml
@@ -8,6 +8,7 @@
   - jq
   - ripgrep
   - wget
+  - ipmitool
 
   # osx defaults reference:
   # https://github.com/mathiasbynens/dotfiles/blob/master/.macos
