Adding git and ipcalc homebrew install

--- a/tasks/MacOSX/main.yml
+++ b/tasks/MacOSX/main.yml
@@ -10,6 +10,9 @@
   - wget
   - ipmitool
   - terraform
+  - git
+  - git-filter-repo
+  - ipcalc
 
   # osx defaults reference:
   # https://github.com/mathiasbynens/dotfiles/blob/master/.macos
