Setting default editor to vi in ubuntu

--- a/tasks/Ubuntu/main.yml
+++ b/tasks/Ubuntu/main.yml
@@ -16,3 +16,8 @@
   - ipcalc
   - telnet
 
+- name: set vi as default editor
+  alternatives:
+    name: editor
+    path: /usr/bin/vi
+  become: yes
