--- a/tasks/MacOSX/main.yml
+++ b/tasks/MacOSX/main.yml
@@ -15,14 +15,19 @@
   - ipcalc
   - sf-pwgen
   - telnet
+  - yq
 
   # osx defaults reference:
   # https://github.com/mathiasbynens/dotfiles/blob/master/.macos
   # https://github.com/pawelgrzybek/dotfiles/blob/master/setup-macos.sh
 
-- homebrew_cask:
-    name: alfred
+- name: Install casks
+  homebrew_cask:
+    name: "{{ item }}"
     state: present
+  loop:
+   - alfred
+   - macdown
 
 - osx_defaults:
     domain: com.apple.dock
