Adding tilix and sqlite to ubuntu

--- a/tasks/Ubuntu/main.yml
+++ b/tasks/Ubuntu/main.yml
@@ -17,6 +17,9 @@
   - telnet
   - curl
   - calc
+  - tilix
+  - gnome-shell-extension-tilix-dropdown
+  - sqlite
 
 - name: set vi as default editor
   alternatives:
