--- a/tasks/MacOSX/main.yml
+++ b/tasks/MacOSX/main.yml
@@ -1,8 +1,9 @@
 ---
 - name: install packages homebrew
-  homebrew:
+  community.general.homebrew:
     name: "{{ item }}"
     state: present
+  become: no
   loop:
   - httpie
   - jq
@@ -21,14 +22,6 @@
   # osx defaults reference:
   # https://github.com/mathiasbynens/dotfiles/blob/master/.macos
   # https://github.com/pawelgrzybek/dotfiles/blob/master/setup-macos.sh
-
-- name: Install casks
-  homebrew_cask:
-    name: "{{ item }}"
-    state: present
-  loop:
-   - alfred
-   - macdown
 
 - osx_defaults:
     domain: com.apple.dock
